fix login height bugs on mobile devices

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,4 +1,3 @@
-
 .login {
   background: var(--color-blue-02);
   display: flex;
@@ -292,6 +291,23 @@
   .login {
     .left-login-section-background {
       display: none;
+    }
+
+    .right-login-section {
+      height: 100vh;
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+
+      .header-section {
+        width: 100%;
+      }
+
+      form {
+        width: 100%;
+      }
     }
   }
 }
