--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 @import url(fontiran.css);
 
 :root {
-  --color-primary: #3D8BF2;
+  --color-primary: #3d8bf2;
   --color-blue-01: rgba(195, 219, 251, 0.5);
   --color-blue-02: rgba(226, 238, 253, 1);
   --color-blue-03: rgba(236, 243, 254, 1);
   --color-blue-04: rgba(195, 219, 251, 0.25);
   --color-blue-05: rgba(195, 219, 251, 0.75);
-  --color-blue-06: #316FC2;
+  --color-blue-06: #316fc2;
   --color-text-01: #474747;
   --color-text-02: #363636;
   --color-text-03: #27538c;
@@ -18,14 +18,14 @@
   --color-text-08: #2e68b6;
   --color-text-09: #255391;
   --color-text-10: #919191;
-  --color-border-bottom-01: rgba(21 , 49 , 85 , 0.15);
+  --color-border-bottom-01: rgba(21, 49, 85, 0.15);
   --color-white: #ffffff;
 
-  --color-dashboard-bg: #F6F9FE;
-  --color-dashboard-bg-primary: #E3ECFC;
-  --color-dashboard-text-01: rgba(80 , 80 , 80 , 0.35);
-  --color-dashboard-text-02: rgba(140 , 140 , 140 , 1);
-  --color-dashboard-border : rgba(140 , 140 , 140 , 0.15);
+  --color-dashboard-bg: #f6f9fe;
+  --color-dashboard-bg-primary: #e3ecfc;
+  --color-dashboard-text-01: rgba(80, 80, 80, 0.35);
+  --color-dashboard-text-02: rgba(140, 140, 140, 1);
+  --color-dashboard-border: rgba(140, 140, 140, 0.15);
 }
 
 *,
